feat: sidenav e header

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -10,5 +10,21 @@ html, body {
 }
 
 body { 
-    @apply bg-body dark:bg-dark-body m-0 font-nunito box-border;
+    @apply m-0 font-nunito box-border;
+}
+
+.default-text {
+    @apply text-text dark:text-text-dark;
+}
+
+.flex-center {
+    @apply flex items-center justify-center;
+}
+
+::-webkit-scrollbar {
+    @apply w-[.4rem] h-[.4rem] rounded bg-gray-400 dark:bg-gray-500;
+}
+
+::-webkit-scrollbar-thumb {
+    @apply rounded bg-gray-600 dark:bg-gray-800;
 }
