--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,27 +1,20 @@
 header {
-    @apply flex items-center justify-end py-4 px-6 gap-8;
+    @apply flex items-center justify-end py-4 px-6 gap-2 bg-body-1 dark:bg-body-dark-1;
+    
+    .avatar, .notifications, .theme {
+        @apply cursor-pointer w-9 h-9 rounded-full;
+
+        mat-icon {
+            @apply w-5 h-5 text-[1.25rem]
+        }
+    }
+
+    .notifications {
+        @apply bg-[#0740D9] text-text-dark;
+    }
 
     .theme {
-        @apply flex items-center;
+        @apply bg-body-2 dark:bg-body-dark-2 rounded-xl;
     }
 
-    .avatar {
-        @apply flex items-center justify-center mr-4 relative;
-
-        img {
-            @apply w-8 h-8 object-cover rounded-full cursor-pointer;
-        }
-
-        .avatar-info {
-            @apply flex gap-2 items-center cursor-pointer;
-
-            span {
-                @apply flex items-center justify-center gap-2 text-primary dark:text-white;
-
-                mat-icon {
-                    @apply text-base align-middle w-5 h-5 text-[1.25rem];
-                }
-            }
-        }
-    }
 }
