--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,14 +1,25 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav #sidenav [opened]="true" [mode]="navMode" (mouseenter)="changeSize('normal')" (mouseleave)="changeSize('mini')">
+    <mat-sidenav [opened]="!isMobile" [mode]="isMobile ? 'over' : 'side'">
         <mat-nav-list>
-            @for (item of items; track item.route) {
-                <mat-icon>{{ item.icon }}</mat-icon>
-                <span>{{ item.name }}</span>
-            }
+            <div class="title">
+                <h1 class="default-text">Finance</h1>
+            </div>
+            <ul>
+                @for (item of items; track item.route) {
+                    <li [routerLink]="item.route" routerLinkActive="active" class="default-text">
+                        <mat-icon class="material-icons-outlined">{{ item.icon }}</mat-icon>
+                        <a>{{ item.name }}</a>
+                    </li>
+                }
+            </ul>
         </mat-nav-list>
     </mat-sidenav>
     <mat-sidenav-content>
-        <header-component></header-component>
+        <header-component>
+            <div>
+                <mat-icon *ngIf="isMobile" (click)="toggleMenu()">menu</mat-icon>
+            </div>
+        </header-component>
         <main>
             <ng-content></ng-content>
         </main>
