--- a/src/app/core/components/sidenav/sidenav.component.scss
+++ b/src/app/core/components/sidenav/sidenav.component.scss
@@ -1,11 +1,39 @@
 :host ::ng-deep {
 
     mat-sidenav-container {
+        .title {
+            @apply p-3 pb-20;
+
+            h1 {
+                @apply text-2xl font-black;
+            }
+        }
+
         mat-sidenav {
             @apply bg-body-3 dark:bg-body-dark-3;
 
             &.mat-drawer-opened {
-                @apply w-[270px];
+                @apply w-[250px];
+            }
+
+            mat-nav-list {
+                @apply flex flex-col;
+
+                ul {
+                    @apply list-none;
+                    
+                    li {
+                        @apply flex items-center justify-start gap-2 pl-3 py-2 cursor-pointer text-sm;
+    
+                        &:hover {
+                            @apply bg-accent;
+                        }
+    
+                        mat-icon {
+                            @apply w-5 h-5 text-[1.25rem];
+                        }
+                    }
+                }
             }
         }
 
