--- a/src/assets/theme/_reset.scss
+++ b/src/assets/theme/_reset.scss
@@ -1,2 +1,7 @@
+::-webkit-scrollbar {
+    @apply w-[.4rem] h-[.4rem] rounded bg-gray-400 dark:bg-gray-500;
+}
 
-
+::-webkit-scrollbar-thumb {
+    @apply rounded bg-gray-600 dark:bg-gray-800;
+}
