--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -2,7 +2,7 @@
     <mat-sidenav [opened]="!isMobile" [mode]="isMobile ? 'over' : 'side'">
         <mat-nav-list>
             <div class="title">
-                <h1 class="default-text">Finance</h1>
+                <img alt="logo">
             </div>
             <ul>
                 @for (item of items; track item.route) {
@@ -25,3 +25,5 @@
         </main>
     </mat-sidenav-content>
 </mat-sidenav-container>
+
+
