--- a/src/app/core/components/header/header.component.scss
+++ b/src/app/core/components/header/header.component.scss
@@ -1,5 +1,5 @@
 header {
-    @apply flex items-center justify-between py-4 px-6 bg-body-1 dark:bg-body-dark-1;
+    @apply flex items-center justify-between py-4 px-6 bg-white dark:bg-body-dark-1;
     .items {
         @apply flex items-center justify-end gap-2;
 
@@ -16,7 +16,7 @@ header {
         }
     
         .theme {
-            @apply bg-body-2 dark:bg-body-dark-2 rounded-xl;
+            @apply bg-gray-200 dark:bg-body-dark-2 rounded-xl;
         }
     }
 
