--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -21,7 +21,7 @@
             </div>
         </header-component>
         <main>
-            <ng-content></ng-content>
+            <router-outlet></router-outlet>
         </main>
     </mat-sidenav-content>
 </mat-sidenav-container>
