feat: transacoes page

--- a/src/app/core/components/header/header.component.html
+++ b/src/app/core/components/header/header.component.html
@@ -1,5 +1,7 @@
 <header>
-    <ng-content></ng-content>
+    <div>
+        <ng-content></ng-content>
+    </div>
 
     <div class="items default-text">
         <div class="avatar" [matMenuTriggerFor]="menu">
