--- a/src/app/views/not-found/not-found.component.html
+++ b/src/app/views/not-found/not-found.component.html
@@ -1,1 +1,7 @@
-<p>not-found works!</p>
+<section class="flex-center">
+    <h1>404</h1>
+    <p>Página não encontrada :(</p>
+    <button [routerLink]="['/dashboard']">
+        <span>Voltar a página inicial</span>
+    </button>
+</section>
