--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,3 +1,33 @@
-<main class="default-text">
-    <p>dashboard works!</p>
-</main>
+<section class="w-[65%]">
+    <div class="row h-[20%]">
+        <div class="card">
+            recebido
+        </div>
+        <div class="card">
+            saidas
+        </div>
+    </div>
+    <div class="row h-[40%]">
+        <div class="card">
+            analytics
+        </div>
+    </div>
+    <div class="row h-[40%]">
+        <div class="card">
+            transacoes
+        </div>
+    </div>
+</section>
+
+<section class="w-[35%]">
+    <div class="row h-[50%]">
+        <div class="card">
+            Cartões
+        </div>
+    </div>
+    <div class="row h-[50%]">
+        <div class="card">
+            Atividades
+        </div>
+    </div>
+</section>
