--- a/src/app/views/transacoes/transacoes.component.html
+++ b/src/app/views/transacoes/transacoes.component.html
@@ -1,1 +1,12 @@
-transacoes
+<div class="flex items-center justify-center gap-2">
+    <div class="border-2 border-gray-800 rounded-3xl flex items-center justify-center">
+        <mat-icon>chevron_left</mat-icon>
+    </div>
+    <span class="flex items-center justify-center gap-0.5 border-2 border-gray-800 p-2 rounded-3xl">
+        <mat-icon class="mr-2">calendar_month</mat-icon>
+        <b>Setembro</b> 2024
+    </span>
+    <div class="border-2 border-gray-800 rounded-3xl flex items-center justify-center">
+        <mat-icon>chevron_right</mat-icon>
+    </div>
+</div>
