--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -1,24 +1,24 @@
 <mat-sidenav-container class="sidenav-container">
-    <mat-sidenav [opened]="!isMobile" [mode]="isMobile ? 'over' : 'side'">
-        <mat-nav-list>
-            <div class="title flex-center">
-                <img alt="logo">
+    <mat-sidenav [opened]="!isMobile" [mode]="isMobile ? 'over' : 'side'" class="bg-white dark:bg-body-dark-3 border-0">
+        <mat-nav-list class="flex flex-col">
+            <div class="flex-center mx-6 mt-6 mb-16">
+                <img class="h-6" alt="logo" [src]="logo">
             </div>
             <ul>
                 @for (item of items; track item.route) {
-                    <li [routerLink]="item.route" routerLinkActive="active" class="default-text">
-                        <mat-icon class="material-icons-outlined">{{ item.icon }}</mat-icon>
+                    <li [routerLink]="item.route" routerLinkActive="active" class="default-text flex items-center justify-start gap-2 pl-5 py-2 cursor-pointer text-sm">
+                        <mat-icon class="material-icons-outlined w-5 h-5 text-[1.25rem]">{{ item.icon }}</mat-icon>
                         <a>{{ item.name }}</a>
                     </li>
                 }
             </ul>
         </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content>
+    <mat-sidenav-content class="min-h-screen bg-body-1 dark:bg-body-dark-2">
         <header-component>
             <mat-icon *ngIf="isMobile" (click)="toggleMenu()">menu</mat-icon>
         </header-component>
-        <main>
+        <main class="h-[calc(100vh-68px)]">
             <router-outlet></router-outlet>
         </main>
     </mat-sidenav-content>
