--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,33 +1,33 @@
-<section class="w-[65%]">
-    <div class="row h-[20%]">
-        <div class="card">
+<section class="w-[65%] flex flex-col gap-6">
+    <div class="flex gap-6 h-[20%]">
+        <dashboard-card>
             recebido
-        </div>
-        <div class="card">
+        </dashboard-card>
+        <dashboard-card>
             saidas
-        </div>
+        </dashboard-card>
     </div>
-    <div class="row h-[40%]">
-        <div class="card">
+    <div class="flex gap-6 h-[40%]">
+        <dashboard-card>
             analytics
-        </div>
+        </dashboard-card>
     </div>
-    <div class="row h-[40%]">
-        <div class="card">
+    <div class="flex gap-6 h-[40%]">
+        <dashboard-card>
             transacoes
-        </div>
+        </dashboard-card>
     </div>
 </section>
 
 <section class="w-[35%]">
-    <div class="row h-[50%]">
-        <div class="card">
+    <div class="flex gap-6 h-[50%]">
+        <dashboard-card>
             Cartões
-        </div>
+        </dashboard-card>
     </div>
-    <div class="row h-[50%]">
-        <div class="card">
+    <div class="flex gap-6 h-[50%]">
+        <dashboard-card>
             Atividades
-        </div>
+        </dashboard-card>
     </div>
 </section>
