--- a/src/assets/theme/_material.scss
+++ b/src/assets/theme/_material.scss
@@ -11,3 +11,9 @@ $finance-angular-theme: mat.define-light-theme((
   )
 ));
 @include mat.all-component-themes($finance-angular-theme);
+
+.mat-icon {
+  display: flex !important;
+  align-items: center !important;
+  justify-content: center !important;
+}
