--- a/src/app/views/transacoes/transacoes.component.html
+++ b/src/app/views/transacoes/transacoes.component.html
@@ -1,12 +1,52 @@
-<div class="flex items-center justify-center gap-2">
-    <div class="border-2 border-gray-800 rounded-3xl flex items-center justify-center">
-        <mat-icon>chevron_left</mat-icon>
+<div class="w-full items-center justify-center gap-3 grid grid-cols-3 grid-rows-1">
+    <transacao-card>Receitas</transacao-card>
+    <transacao-card>Despesas</transacao-card>
+    <transacao-card>Balanço mensal</transacao-card>
+</div>
+
+<div class="flex flex-col bg-white w-full mt-7">
+    <div class="flex flex-col gap-2 w-full my-6">
+        @if(dateControlService.showMonthView | async) {
+            <month-view></month-view>
+        } @else {
+            <year-view></year-view>
+        }
     </div>
-    <span class="flex items-center justify-center gap-0.5 border-2 border-gray-800 p-2 rounded-3xl">
-        <mat-icon class="mr-2">calendar_month</mat-icon>
-        <b>Setembro</b> 2024
-    </span>
-    <div class="border-2 border-gray-800 rounded-3xl flex items-center justify-center">
-        <mat-icon>chevron_right</mat-icon>
+
+    <div class="relative overflow-x-auto w-full">
+        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
+            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
+                <tr>
+                    <th scope="col" class="px-6 py-3">Data</th>
+                    <th scope="col" class="px-6 py-3">Descrição</th>
+                    <th scope="col" class="px-6 py-3">Categoria</th>
+                    <th scope="col" class="px-6 py-3">Conta</th>
+                    <th scope="col" class="px-6 py-3">Valor</th>
+                    <th scope="col" class="px-6 py-3"></th>
+                </tr>
+            </thead>
+            <tbody>
+                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
+                    <th class="px-6 py-4">
+                        Apple MacBook Pro 17"
+                    </th>
+                    <td class="px-6 py-4">
+                        Silver
+                    </td>
+                    <td class="px-6 py-4">
+                        Laptop
+                    </td>
+                    <td class="px-6 py-4">
+                        $2999
+                    </td>
+                    <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
+                        Laptop
+                    </td>
+                    <td class="px-6 py-4">
+                        $2999
+                    </td>
+                </tr>
+            </tbody>
+        </table>
     </div>
 </div>
