feat: transaction table basis

--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -14,7 +14,7 @@
             </ul>
         </mat-nav-list>
     </mat-sidenav>
-    <mat-sidenav-content class="min-h-screen bg-body-1 dark:bg-body-dark-2">
+    <mat-sidenav-content class="min-h-screen bg-body-1 dark:bg-gray-900">
         <header-component>
             <mat-icon *ngIf="isMobile" (click)="toggleMenu()">menu</mat-icon>
         </header-component>
