--- a/src/styles.scss
+++ b/src/styles.scss
@@ -5,6 +5,7 @@
 @import "./assets/theme/reset";
 @import "./assets/theme/material";
 @import "./assets/theme/utilitary-classes";
+@import "./assets/theme/table";
 
 html, body { 
     @apply h-full; 
