--- a/src/app/views/transacoes/components/chevron/chevron.component.html
+++ b/src/app/views/transacoes/components/chevron/chevron.component.html
@@ -1,5 +1,5 @@
-<div class="border-2 border-gray-800 rounded-3xl flex items-center justify-center duration-300 cursor-pointer
-        hover:bg-gray-200
+<div class="border-2 border-accent text-accent rounded-3xl flex items-center justify-center duration-300 cursor-pointer
+        hover:bg-gray-100
         dark:border-gray-200 dark:text-gray-200 dark:hover:bg-gray-700">
     <mat-icon>
         {{ direction === "left" ? "chevron_left" : "chevron_right" }}
