--- a/src/app/views/transacoes/components/year-view/year-view.component.html
+++ b/src/app/views/transacoes/components/year-view/year-view.component.html
@@ -1,15 +1,15 @@
 <div class="flex items-center justify-center gap-2">
     <chevron (click)="dateControl.previousYear()" direction="left"></chevron>
-    <span class="flex items-center justify-center gap-0.5 p-2
+    <span class="flex items-center justify-center gap-0.5 p-2 text-accent
         dark:text-gray-200">
         {{ dateControl.year | async }}
     </span>
     <chevron (click)="dateControl.nextYear()" direction="right"></chevron>
 </div>
 <div class="flex items-center justify-center gap-2 mt-2">
-    <span class="month-label text-xs flex items-center justify-center gap-0.5 border-2 border-gray-800 p-2 rounded-3xl cursor-pointer
-        hover:bg-gray-200
-        dark:border-gray-200 dark:text-gray-200" 
+    <span class="month-label text-xs flex items-center justify-center gap-0.5 border-2 border-accent text-accent p-2 rounded-3xl cursor-pointer
+        hover:bg-gray-100
+        dark:border-gray-200 dark:text-gray-200 dark:hover:bg-gray-700" 
         *ngFor="let month of months ; let i = index"
         (click)="dateControl.changeMonth(i)"
         [class.active]="(dateControl.getMonthLabel() | async) === month">
