--- a/src/app/views/transacoes/transacoes.component.html
+++ b/src/app/views/transacoes/transacoes.component.html
@@ -4,49 +4,44 @@
     <transacao-card>Balanço mensal</transacao-card>
 </div>
 
-<div class="flex flex-col bg-white w-full mt-7">
+<div class="flex flex-col bg-white w-full mt-7 dark:bg-gray-900">
     <div class="flex flex-col gap-2 w-full my-6">
         @if(dateControlService.showMonthView | async) {
-            <month-view></month-view>
+            <month-view/>
         } @else {
-            <year-view></year-view>
+            <year-view/>
         }
     </div>
 
-    <div class="relative overflow-x-auto w-full">
-        <table class="w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400">
-            <thead class="text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400">
-                <tr>
-                    <th scope="col" class="px-6 py-3">Data</th>
-                    <th scope="col" class="px-6 py-3">Descrição</th>
-                    <th scope="col" class="px-6 py-3">Categoria</th>
-                    <th scope="col" class="px-6 py-3">Conta</th>
-                    <th scope="col" class="px-6 py-3">Valor</th>
-                    <th scope="col" class="px-6 py-3"></th>
-                </tr>
+    <div class="table-section">
+        <table>
+            <thead>
+                <th fin-col><checkbox /></th>
+                <th fin-col fin-sort-header>Data</th>
+                <th fin-col fin-sort-header>Descrição</th>
+                <th fin-col fin-sort-header>Categoria</th>
+                <th fin-col fin-sort-header>Conta</th>
+                <th fin-col fin-sort-header>Valor</th>
+                <th fin-col></th>
             </thead>
             <tbody>
-                <tr class="bg-white border-b dark:bg-gray-800 dark:border-gray-700">
-                    <th class="px-6 py-4">
-                        Apple MacBook Pro 17"
-                    </th>
-                    <td class="px-6 py-4">
-                        Silver
-                    </td>
-                    <td class="px-6 py-4">
-                        Laptop
-                    </td>
-                    <td class="px-6 py-4">
-                        $2999
-                    </td>
-                    <td scope="row" class="px-6 py-4 font-medium text-gray-900 whitespace-nowrap dark:text-white">
-                        Laptop
-                    </td>
-                    <td class="px-6 py-4">
-                        $2999
-                    </td>
-                </tr>
+                @for (transaction of transactions; track transaction.transactionId) {
+                    <tr>
+                        <th fin-col><checkbox /></th>
+                        <td>{{ transaction.date }}</td>
+                        <td>{{ transaction.description }}</td>
+                        <td>{{ transaction.category }}</td>
+                        <td>{{ transaction.account }}</td> 
+                        <td class="bolder">R$ {{ transaction.amount }}</td>
+                        <td><mat-icon class="material-symbols-outlined ">more_vert</mat-icon></td>
+                    </tr>
+                  } @empty {
+                    <h1>Sem registros.</h1>
+                  }
             </tbody>
         </table>
     </div>
+
 </div>
+
+<add-button />
