--- a/src/assets/theme/_material.scss
+++ b/src/assets/theme/_material.scss
@@ -1,9 +1,9 @@
 @use '@angular/material' as mat;
 @include mat.core();
-$finance-angular-primary: mat.define-palette(mat.$indigo-palette);
-$finance-angular-accent: mat.define-palette(mat.$pink-palette, A200, A100, A400);
-$finance-angular-warn: mat.define-palette(mat.$red-palette);
-$finance-angular-theme: mat.define-light-theme((
+$finance-angular-primary: mat.m2-define-palette(mat.$m2-indigo-palette);
+$finance-angular-accent: mat.m2-define-palette(mat.$m2-pink-palette, A200, A100, A400);
+$finance-angular-warn: mat.m2-define-palette(mat.$m2-red-palette);
+$finance-angular-theme: mat.m2-define-light-theme((
   color: (
     primary: $finance-angular-primary,
     accent: $finance-angular-accent,
