--- a/src/app/core/components/checkbox/checkbox.component.html
+++ b/src/app/core/components/checkbox/checkbox.component.html
@@ -1,2 +1,4 @@
-<input id="checkbox-all" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
-<label for="checkbox-all" class="sr-only">checkbox</label>
+<div class="flex justify-center items-center w-full">
+    <input id="checkbox-all" type="checkbox" class="w-4 h-4 text-blue-600 bg-gray-100 border-gray-300 rounded focus:ring-blue-500 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800 focus:ring-2 dark:bg-gray-700 dark:border-gray-600">
+    <label for="checkbox-all" class="sr-only">checkbox</label>
+</div>
