--- a/src/app/views/transacoes/components/modal-add/modal-add.component.html
+++ b/src/app/views/transacoes/components/modal-add/modal-add.component.html
@@ -1,1 +1,39 @@
-<p>modal-add works!</p>
+<form class="max-w-sm mx-auto w-full"[formGroup]="formGroup">
+    <div class="input-group">
+      <label for="email">Data</label>
+      <input type="email" id="email"placeholder="name@flowbite.com" required formGroupName="date" />
+    </div>
+    <div class="input-group">
+      <label for="password">Descrição</label>
+      <input type="password" id="password"required formGroupName="description" />
+    </div>
+    <div class="input-group">
+        <label for="email">Valor</label>
+        <input type="email" id="email"placeholder="name@flowbite.com" required formGroupName="amount" />
+    </div>
+    <div class="input-group">
+        <label for="password">Categoria</label>
+        <input type="password" id="password"required formGroupName="categoryId" />
+    </div>
+    <div class="input-group">
+        <label for="email">Conta</label>
+        <fin-autocomplete
+        [formGroup]="formGroup"
+        [items]="users"
+        displayProperty="name"
+        formControlName="userId"
+        (addNewItem)="handleAddNew($event)" />    </div>
+
+    <div class="flex items-start mb-5">
+      <div class="flex items-center h-5">
+        <input id="remember" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 
+        dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800" required />
+      </div>
+      <label for="remember" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Remember me</label>
+    </div>
+    <button (click)="submit()" >Submit</button>
+
+
+    
+  </form>
+  
