--- a/src/app/views/auth/auth.component.html
+++ b/src/app/views/auth/auth.component.html
@@ -1,3 +1,49 @@
-<main class="default-text">
-    <p>auth works!</p>
-</main>
+<div class="flex items-center justify-center h-screen bg-gray-50">
+    <div class="w-full max-w-sm p-6 bg-white rounded-lg shadow-lg">
+      <h2 class="text-2xl font-bold text-center text-gray-800">Bem-vindo de volta!</h2>
+      <p class="mt-2 text-sm text-center text-gray-500">Acesse sua conta</p>
+      <form class="mt-6 space-y-4" [formGroup]="formGroup" (ngSubmit)="onSubmit()">
+        <div>
+          <label for="email" class="block text-sm font-medium text-gray-700">Email</label>
+          <input 
+            type="email" 
+            id="email" 
+            name="email" 
+            required 
+            class="w-full mt-1 px-4 py-2 text-sm border rounded-md focus:ring-2 focus:ring-indigo-500 focus:outline-none"
+            placeholder="you@example.com"
+            formControlName="email"
+          />
+        </div>
+        <div>
+          <label for="password" class="block text-sm font-medium text-gray-700">Password</label>
+          <input 
+            type="password" 
+            id="password" 
+            name="password" 
+            required 
+            class="w-full mt-1 px-4 py-2 text-sm border rounded-md focus:ring-2 focus:ring-indigo-500 focus:outline-none"
+            placeholder="••••••••"
+            formControlName="password"
+          />
+        </div>
+        <div class="flex items-center justify-between">
+          <label class="inline-flex items-center">
+            <input type="checkbox" class="w-4 h-4 text-indigo-500 border-gray-300 rounded focus:ring-indigo-400" />
+            <span class="ml-2 text-sm text-gray-600">Lembrar senha</span>
+          </label>
+          <a href="#" class="text-sm text-indigo-500 hover:underline">Esqueceu sua senha?</a>
+        </div>
+        <button 
+          type="submit" 
+          class="w-full px-4 py-2 text-sm font-medium text-white bg-indigo-500 rounded-md hover:bg-indigo-600 focus:ring-2 focus:ring-indigo-500 focus:outline-none"
+        >
+          Login
+        </button>
+      </form>
+      <p class="mt-6 text-sm text-center text-gray-600">
+        Não tem uma conta? 
+        <a href="#" class="text-indigo-500 hover:underline">Cadastre-se</a>
+      </p>
+    </div>
+  </div>
