--- a/src/app/views/transacoes/components/modal-add/modal-add.component.html
+++ b/src/app/views/transacoes/components/modal-add/modal-add.component.html
@@ -1,39 +1,55 @@
-<form class="max-w-sm mx-auto w-full"[formGroup]="formGroup">
-    <div class="input-group">
-      <label for="email">Data</label>
-      <input type="email" id="email"placeholder="name@flowbite.com" required formGroupName="date" />
+<div class="fixed inset-0 bg-black bg-opacity-50 flex items-center justify-center z-50">
+  <div class="bg-white rounded-lg shadow-lg w-full max-w-lg p-6">
+    <div class="flex justify-between items-center mb-4">
+      <h2 class="text-xl font-semibold">Cadastrar transação</h2>
+      <button 
+        class="text-gray-500 hover:text-gray-700 focus:outline-none"
+      >
+        &times;
+      </button>
     </div>
-    <div class="input-group">
-      <label for="password">Descrição</label>
-      <input type="password" id="password"required formGroupName="description" />
-    </div>
-    <div class="input-group">
-        <label for="email">Valor</label>
-        <input type="email" id="email"placeholder="name@flowbite.com" required formGroupName="amount" />
-    </div>
-    <div class="input-group">
-        <label for="password">Categoria</label>
-        <input type="password" id="password"required formGroupName="categoryId" />
-    </div>
-    <div class="input-group">
-        <label for="email">Conta</label>
-        <fin-autocomplete
-        [formGroup]="formGroup"
-        [items]="users"
-        displayProperty="name"
-        formControlName="userId"
-        (addNewItem)="handleAddNew($event)" />    </div>
 
-    <div class="flex items-start mb-5">
-      <div class="flex items-center h-5">
-        <input id="remember" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 
-        dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800" required />
+    <form class="p-6"[formGroup]="formGroup">
+      <div class="input-group">
+        <label for="date">Data</label>
+        <fin-date-picker formControlName="date" />
       </div>
-      <label for="remember" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Remember me</label>
-    </div>
-    <button (click)="submit()" >Submit</button>
-
-
-    
-  </form>
+      <div class="input-group">
+        <label for="password">Descrição</label>
+        <input type="password" id="password"required formControlName="description" />
+      </div>
+      <div class="input-group">
+        <label for="value">Valor</label>
+        <input type="value" id="value"placeholder="name@flowbite.com" required formControlName="amount" />
+      </div>
+      <div class="input-group">
+        <label for="category">Categoria</label>
+        <fin-autocomplete
+          [formGroup]="formGroup"
+          [items]="categories"
+          displayProperty="name"
+          formControlName="categoryId"
+          (addNewItem)="handleAddNew($event)" />    
+      </div>
+      <div class="input-group">
+        <label for="account">Conta</label>
+        <fin-autocomplete
+          [formGroup]="formGroup"
+          [items]="accounts"
+          displayProperty="name"
+          formControlName="accountId"
+          (addNewItem)="handleAddNew($event)" />    
+      </div>
   
+      <div class="flex items-start mb-5">
+        <div class="flex items-center h-5">
+          <input id="remember" type="checkbox" value="" class="w-4 h-4 border border-gray-300 rounded bg-gray-50 focus:ring-3 focus:ring-blue-300 
+          dark:bg-gray-700 dark:border-gray-600 dark:focus:ring-blue-600 dark:ring-offset-gray-800 dark:focus:ring-offset-gray-800" required />
+        </div>
+        <label for="remember" class="ms-2 text-sm font-medium text-gray-900 dark:text-gray-300">Remember me</label>
+      </div>
+      <button (click)="submit()" >Submit</button>
+    </form>
+    
+  </div>
+</div>
