--- a/src/app/core/shared/fin-forms/fin-autocomplete/fin-autocomplete.component.html
+++ b/src/app/core/shared/fin-forms/fin-autocomplete/fin-autocomplete.component.html
@@ -1,9 +1,7 @@
 <div class="dropdown-container relative mb-5">
-    <input
-      type="text"
+    <fin-input
       formControlName="searchControl"
       (focus)="openDropdown()"
-      class="bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg focus:ring-blue-500 focus:border-blue-500 block w-full p-2.5 dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white dark:focus:ring-blue-500 dark:focus:border-blue-500"
       placeholder="Pesquisar..."
       autocomplete="off"
     />
