--- a/src/app/core/shared/fin-table/fin-table.component.html
+++ b/src/app/core/shared/fin-table/fin-table.component.html
@@ -11,18 +11,12 @@
         </tr>
       </thead>
       <tbody>
-        <tr *ngFor="let row of paginatedData">
+        <tr *ngFor="let row of data">
           <td *ngFor="let column of columns">
             {{ getColumnValue(row, column) }}
           </td>
         </tr>
       </tbody>
     </table>
-  
-    <div class="pagination">
-      <button (click)="changePage(currentPage - 1)" [disabled]="currentPage === 0">Previous</button>
-      <span>{{ currentPage + 1 }} / {{ totalPages }}</span>
-      <button (click)="changePage(currentPage + 1)" [disabled]="currentPage === totalPages - 1">Next</button>
-    </div>
 </div>
   
