--- a/public/assets/theme/_table.scss
+++ b/public/assets/theme/_table.scss
@@ -1,8 +1,8 @@
-.table-section {
-  @apply relative overflow-x-auto shadow-md sm:rounded-lg w-full p-6 pt-0;
+.fin-table {
+  @apply relative overflow-x-auto shadow-md w-full;
 
   table {
-    @apply w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 border dark:border-zinc-500;
+    @apply border-collapse w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 border dark:border-zinc-500;
 
     thead {
       @apply text-xs text-gray-700 uppercase bg-gray-50 dark:bg-gray-700 dark:text-gray-400;
