--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,33 +1,17 @@
-<section class="w-[65%] flex flex-col gap-6">
-    <div class="flex gap-6 h-[20%]">
-        <dashboard-card>
-            recebido
-        </dashboard-card>
-        <dashboard-card>
-            saidas
-        </dashboard-card>
+<section class="w-[65%] flex flex-col gap-4">
+    <div class="flex gap-4 h-[20%]">
+        <balance-card class="w-full bg-white border border-gray-200 rounded-xl" />
+        <incomes-card class="w-full bg-white border border-gray-200 rounded-xl"/>
+        <expenses-card class="w-full bg-white border border-gray-200 rounded-xl"/>
     </div>
-    <div class="flex gap-6 h-[40%]">
-        <dashboard-card>
-            analytics
-        </dashboard-card>
-    </div>
-    <div class="flex gap-6 h-[40%]">
-        <dashboard-card>
-            transacoes
-        </dashboard-card>
+    <div class="flex gap-4 h-[80%] border border-gray-200 rounded-xl overflow-y-scroll">
+        <transactions-card class="w-full bg-white border border-gray-200 rounded-xl" />
     </div>
 </section>
 
-<section class="w-[35%]">
-    <div class="flex gap-6 h-[50%]">
-        <dashboard-card>
-            Cartões
-        </dashboard-card>
+<section class="w-[35%] flex flex-col gap-4">
+    <div class="flex gap-4 h-[50%] bg-white">
     </div>
-    <div class="flex gap-6 h-[50%]">
-        <dashboard-card>
-            Atividades
-        </dashboard-card>
+    <div class="flex gap-4 h-[50%] bg-white">
     </div>
 </section>
