--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -1,17 +1,19 @@
 <section class="w-[65%] flex flex-col gap-4">
-    <div class="flex gap-4 h-[20%]">
-        <balance-card class="w-full bg-white border border-gray-200 rounded-xl" />
+    <div class="flex gap-4 h-[17%]">
+        <balance-card class="w-full bg-white border border-gray-200 rounded-xl col-span-2" />
         <incomes-card class="w-full bg-white border border-gray-200 rounded-xl"/>
         <expenses-card class="w-full bg-white border border-gray-200 rounded-xl"/>
     </div>
-    <div class="flex gap-4 h-[80%] border border-gray-200 rounded-xl overflow-y-scroll">
-        <transactions-card class="w-full bg-white border border-gray-200 rounded-xl" />
+    <div class="flex gap-4 h-[83%] border border-gray-200 rounded-xl overflow-y-scroll bg-white">
+        <transactions-card class="w-full" />
     </div>
 </section>
 
 <section class="w-[35%] flex flex-col gap-4">
     <div class="flex gap-4 h-[50%] bg-white">
+        a
     </div>
     <div class="flex gap-4 h-[50%] bg-white">
+        a
     </div>
 </section>
