--- a/src/app/core/shared/fin-forms/fin-input/fin-input.component.scss
+++ b/src/app/core/shared/fin-forms/fin-input/fin-input.component.scss
@@ -2,6 +2,6 @@
     input {
         @apply bg-gray-50 border border-gray-300 text-gray-900 text-sm rounded-lg block w-full p-2.5 
             dark:bg-gray-700 dark:border-gray-600 dark:placeholder-gray-400 dark:text-white
-            focus:ring-blue-500 focus:border-blue-500 dark:focus:ring-blue-500 dark:focus:border-blue-500;
+            focus:ring-1 focus:outline-none focus:ring-indigo-500 focus:border-indigo-500 dark:focus:ring-indigo-500 dark:focus:border-indigo-500;
     }
 }
