--- a/src/app/core/shared/fin-toast/fin-toast.component.html
+++ b/src/app/core/shared/fin-toast/fin-toast.component.html
@@ -1,10 +1,10 @@
 <div class="fixed top-4 right-4 flex flex-col gap-2 z-50">
     <div *ngFor="let toast of toastService.toasts$ | async" [class]="'toast ' + toast.type">
       <span>{{ toast.message }}</span>
-      <button
-        class="ml-auto text-sm text-gray-500 hover:text-gray-700"
+      <mat-icon
+        class="material-icons-outlined close-btn"
         (click)="removeToast(toast.id)">
         ✕
-      </button>
+      </mat-icon>
     </div>
 </div>
