--- a/src/app/core/shared/fin-toast/fin-toast.component.scss
+++ b/src/app/core/shared/fin-toast/fin-toast.component.scss
@@ -1,19 +1,35 @@
 :host {
 
     .toast {
-        @apply flex items-center gap-4 p-4 rounded shadow-md transition-transform transform bg-gray-100 text-gray-800 border border-gray-400;
+        @apply relative flex items-center gap-4 p-4 pr-12 rounded-lg shadow-lg transition-transform transform bg-white text-white border border-gray-200;
+        animation: fadeIn 0.5s;
 
         &.success {
-            @apply bg-green-100 text-green-800 border border-green-400;
+            @apply bg-green-500;
         }
         &.error {
-            @apply bg-red-100 text-red-800 border border-red-400;
+            @apply bg-red-500;
         }
         &.info {
-            @apply bg-blue-100 text-blue-800 border border-blue-400;
+            @apply bg-blue-500;
         }
         &.warning {
-            @apply bg-yellow-100 text-yellow-800 border border-yellow-400;
+            @apply bg-yellow-500;
+        }
+
+        .close-btn {
+            @apply text-[14px] h-[14px] w-[14px] ml-auto absolute top-2 right-3 p-2 hover:text-gray-200 cursor-pointer;
+        }
+    }
+
+    @keyframes fadeIn {
+        from {
+            opacity: 0;
+            transform: translateX(20px);
+        }
+        to {
+            opacity: 1;
+            transform: translateX(0);
         }
     }
 }
