--- a/src/app/views/dashboard/dashboard.component.html
+++ b/src/app/views/dashboard/dashboard.component.html
@@ -4,8 +4,8 @@
         <incomes-card class="w-full bg-white border border-gray-200 rounded-xl"/>
         <expenses-card class="w-full bg-white border border-gray-200 rounded-xl"/>
     </div>
-    <div class="flex gap-4 h-[83%] border border-gray-200 rounded-xl overflow-y-scroll bg-white">
-        <transactions-card class="w-full" />
+    <div class="flex gap-4 h-[83%] border border-gray-200 rounded-xl bg-white">
+        a
     </div>
 </section>
 
