--- a/public/assets/theme/_table.scss
+++ b/public/assets/theme/_table.scss
@@ -1,5 +1,5 @@
 .fin-table {
-  @apply relative overflow-x-auto shadow-md w-full;
+  @apply relative overflow-x-auto w-full bg-white p-6 rounded-lg;
 
   table {
     @apply border-collapse w-full text-sm text-left rtl:text-right text-gray-500 dark:text-gray-400 border dark:border-zinc-500;
@@ -25,5 +25,9 @@
         }
       }
     }
+  }
+
+  h1 {
+    @apply w-full text-center mt-8 font-semibold text-xl;
   }
 }
