fix: colors mess

--- a/src/app/core/components/sidenav/components/header/components/date-view/components/chevron/chevron.component.html
+++ b/src/app/core/components/sidenav/components/header/components/date-view/components/chevron/chevron.component.html
@@ -1,4 +1,4 @@
-<div class="border-2 border-accent text-accent rounded-3xl flex items-center justify-center duration-300 cursor-pointer
+<div class="border-2 border-primary text-primary rounded-3xl flex items-center justify-center duration-300 cursor-pointer
         hover:bg-gray-100
         dark:border-gray-200 dark:text-gray-200 dark:hover:bg-gray-700">
     <mat-icon class="text-base">
